--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - '5.5'
   - '5.6'
   - '7.0'
-  - hhvm
   - nightly
-scripts: phpunit tests/TestBlog.php
+before_script:
+  - composer install -n --no-interaction
+script: phpunit tests/TestBlog.php
