--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ php:
   - nightly
 before_script:
   - composer install -n --no-interaction
-script: phpunit tests/TestBlog.php
+script: phpunit --bootstrap vendor/autoload.php tests/TestBlog.php
